Add sending actions to master

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,15 @@
 service:
+  address: '127.0.0.1'
   port: '8080'
   master: true
   slaves:
-    - 127.0.0.0:8081
-    - 127.0.0.0:8082
+    - http://127.0.0.1:8080
+    - http://127.0.0.1:8082
+
+actions:
+  - id: '8080_1'
+    title: 'First'
+    description: 'Test back'
+  - id: '8080_2'
+    title: 'Second'
+    description: 'Test back'
